--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gcc-5 (5.2.1-20) unstable; urgency=medium
+
+  * Update to SVN 20151002 (r228373, 5.2.1) from the gcc-5-branch.
+  * Fix packaging the ada cross library packages.
+
+ -- Matthias Klose <doko@debian.org>  Fri, 02 Oct 2015 10:24:38 +0200
+
 gcc-5 (5.2.1-19) unstable; urgency=medium
 
   * Update to SVN 20150930 (r228302, 5.2.1) from the gcc-5-branch.
