--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gcc-5 (5.2.1-21) unstable; urgency=medium
+
+  * Update to SVN 20151003 (r228449, 5.2.1) from the gcc-5-branch.
+  * Fix building gnat. Closes: #800781.
+
+ -- Matthias Klose <doko@debian.org>  Sat, 03 Oct 2015 17:28:45 +0200
+
 gcc-5 (5.2.1-20) unstable; urgency=medium
 
   * Update to SVN 20151002 (r228373, 5.2.1) from the gcc-5-branch.
