Import patches-unapplied version 5.2.1-25 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 08a558520bbcec5c8c7a2109363cc92839d2ffed

New changelog entries:
  * Update to SVN 20151123 (r230734, 5.2.1) from the gcc-5-branch.
  * Fix libgcc4-dbg dependency on libgcc4. Closes: #805839.
  * Fix building epoch prefixed cross packages.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gcc-5 (5.2.1-25) unstable; urgency=medium
+
+  * Update to SVN 20151123 (r230734, 5.2.1) from the gcc-5-branch.
+  * Fix libgcc4-dbg dependency on libgcc4. Closes: #805839.
+  * Fix building epoch prefixed cross packages.
+
+ -- Matthias Klose <doko@debian.org>  Mon, 23 Nov 2015 05:48:00 +0100
+
 gcc-5 (5.2.1-24) unstable; urgency=medium
 
   * Update to SVN 20151121 (r230703, 5.2.1) from the gcc-5-branch.
