--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gcc-5 (5.3.0-3) experimental; urgency=medium
+
+  * Update libgcc symbols file.
+  * Restore libgcc.symbols.aebi.
+  * Disabled profiled bootstraps for backports.
+
+ -- Matthias Klose <doko@debian.org>  Sat, 05 Dec 2015 07:50:48 +0100
+
 gcc-5 (5.3.0-1) experimental; urgency=medium
 
   * GCC 5.3 release.
