--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-gcc-5 (5.3.0-3) experimental; urgency=medium
+gcc-5 (5.3.1-1) unstable; urgency=medium
+
+  * Update to SVN 20151205 (r231314, 5.3.1) from the gcc-5-branch.
+
+ -- Matthias Klose <doko@debian.org>  Sat, 05 Dec 2015 20:45:53 +0100
+
+gcc-5 (5.3.0-3) unstable; urgency=medium
 
   * Update libgcc symbols file.
   * Restore libgcc.symbols.aebi.
