--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+gcc-5 (5.3.1-2) unstable; urgency=medium
+
+  * Update to SVN 20151206 (r231339, 5.3.1) from the gcc-5-branch.
+  * Re-enable building gdc/libphobos, fixing the profiled build.
+  * Fix PR sanitizer/67899, build failure on sparc/sparc64.
+
+ -- Matthias Klose <doko@debian.org>  Sun, 06 Dec 2015 19:15:46 +0100
+
 gcc-5 (5.3.1-1) unstable; urgency=medium
 
   * Update to SVN 20151205 (r231314, 5.3.1) from the gcc-5-branch.
