Import patches-unapplied version 5.3.1-3 to debian/sid
Imported using git-ubuntu import.

Changelog parent: fb1f687969637d6922299435c2747e7c1a88b7d3

New changelog entries:
  * Update to SVN 20151207 (r231361, 5.3.1) from the gcc-5-branch.
  * Remove upstreamed chunks from the ada-kfreebsd patch.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gcc-5 (5.3.1-3) unstable; urgency=medium
+
+  * Update to SVN 20151207 (r231361, 5.3.1) from the gcc-5-branch.
+  * Remove upstreamed chunks from the ada-kfreebsd patch.
+
+ -- Matthias Klose <doko@debian.org>  Tue, 08 Dec 2015 02:10:51 +0100
+
 gcc-5 (5.3.1-2) unstable; urgency=medium
 
   * Update to SVN 20151206 (r231339, 5.3.1) from the gcc-5-branch.
