--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+gcc-5 (5.3.1-4) unstable; urgency=medium
+
+  * Update to SVN 20151219 (r231847, 5.3.1) from the gcc-5-branch.
+  * Fix cross-building without having the common cross libraries installed.
+  * Update ada-m68k patch.
+  * Allow unstripped, non-optimized debug builds with setting DEB_BUILD_OPTIONS
+    including gccdebug.
+  * Remove obsolete libgccmath packaging support.
+  * Define SONAME macros whether the libraries are built or not.
+  * Update the Linaro support to the 5-2015.12 snapshot (revert the backport
+    for PR target/63870 (ARM32) causing regressions).
+  * Set target tools and build dependencies for cross builds.
+  * Build gdc on sh4.
+
+ -- Matthias Klose <doko@debian.org>  Sat, 19 Dec 2015 04:54:41 +0100
+
 gcc-5 (5.3.1-3) unstable; urgency=medium
 
   * Update to SVN 20151207 (r231361, 5.3.1) from the gcc-5-branch.
