--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+gcc-5 (5.3.1-5) unstable; urgency=medium
+
+  * Update to SVN 20160101 (r232025, 5.3.1) from the gcc-5-branch.
+    - Fix PR c/69037. Closes: #809512, #809165.
+  * Relax gcj-5-{jre,jre-headless,jdk} dependencies on libgcj16.
+  * Build native gnat on sh4. Closes: #809498.
+
+ -- Matthias Klose <doko@debian.org>  Fri, 01 Jan 2016 13:52:24 +0100
+
 gcc-5 (5.3.1-4) unstable; urgency=medium
 
   * Update to SVN 20151219 (r231847, 5.3.1) from the gcc-5-branch.
