--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+gcc-5 (5.3.1-6) unstable; urgency=medium
+
+  * Update to SVN 20160114 (r232387, 5.3.1) from the gcc-5-branch.
+  * Build native gnat on sh4. Closes: #809498.
+  * Relax libgcjjit-5-dev dependency on libgccjit0.
+  * Apply proposed patch for PR target/69187 (armhf). LP: #1533101.
+  * Update libgnatvsn/libgnatprj conflicts.
+  * Update the Linaro support to the 5-2016.01 snapshot.
+  * GCC Linaro: Revert commits causing regressions PR1980 and PR1982.
+
+ -- Matthias Klose <doko@debian.org>  Thu, 14 Jan 2016 21:50:22 +0100
+
 gcc-5 (5.3.1-5) unstable; urgency=medium
 
   * Update to SVN 20160101 (r232025, 5.3.1) from the gcc-5-branch.
@@ -16,7 +28,7 @@ gcc-5 (5.3.1-4) unstable; urgency=medium
     including gccdebug.
   * Remove obsolete libgccmath packaging support.
   * Define SONAME macros whether the libraries are built or not.
-  * Update the Linaro support to the 5-2015.12 snapshot (revert the backport
+  * Update the Linaro support to the 5-2015.12 snapshot.
     for PR target/63870 (ARM32) causing regressions).
   * Set target tools and build dependencies for cross builds.
   * Build gdc on sh4.
