--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+gcc-5 (5.3.1-7) unstable; urgency=medium
+
+  * Update to SVN 20160121 (r232666, 5.3.1) from the gcc-5-branch.
+  * Fix dependencies on target libraries which are not built anymore
+    from this source.
+  * Backport fix for PR jit/69144: Ensure that libgccjit's tempdir is fully
+    cleaned-up.
+  * Backport PR target/69176 (AArch64).
+  * Configure with --enable-fix-cortex-a53-843419 on AArch64.
+
+ -- Matthias Klose <doko@debian.org>  Thu, 21 Jan 2016 10:18:01 +0100
+
 gcc-5 (5.3.1-6) unstable; urgency=medium
 
   * Update to SVN 20160114 (r232387, 5.3.1) from the gcc-5-branch.
