--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+gcc-5 (5.3.1-9) unstable; urgency=medium
+
+  * Update to SVN 20160220 (r233588, 5.3.1) from the gcc-5-branch.
+    - Fix PR tree-optimization/69714. Closes: #813858.
+
+  [ Aurelien Jarno ]
+  * Backport fix for PR target/68273. Closes: #804536.
+
+  [ Matthias Klose ]
+  * Update the Linaro support to the 5-2016.02 snapshot.
+  * gdc: Do validation of input and output constraints, taken from the trunk.
+  * Fix running the acats tests (Svante Signell): Addresses part of #814978.
+
+ -- Matthias Klose <doko@debian.org>  Sat, 20 Feb 2016 17:32:37 +0100
+
 gcc-5 (5.3.1-8) unstable; urgency=medium
 
   * Update to SVN 20160205 (r233179, 5.3.1) from the gcc-5-branch.
