--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gcc-5 (5.3.1-19) unstable; urgency=medium
+
+  * Fix dependency resolution for libraries not built anymore from
+    this source package.
+
+ -- Matthias Klose <doko@debian.org>  Mon, 09 May 2016 23:15:30 +0200
+
 gcc-5 (5.3.1-18) unstable; urgency=medium
 
   * Update to SVN 20160509 (r236033, 5.3.1) from the gcc-5-branch.
