--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+gcc-5 (5.3.1-21) unstable; urgency=medium
+
+  * GCC 5.4.0 release candidate 1.
+  * Update to SVN 20160528 (r236840, 5.3.1) from the gcc-5-branch.
+    - Fix PR libstdc++/69703, PR libstdc++/71038, PR libstdc++/71036,
+      PR libstdc++/71037, PR libstdc++/71005, PR libstdc++/71004,
+      PR libstdc++/70609, PR target/69634, PR middle-end/68142,
+      PR middle-end/69845, PR rtl-optimization/68814, PR lto/69003,
+      PR ipa/66487, PR target/69252, PR target/67973 (x86),
+      PR middle-end/67278, PR target/67278 (x86), PR tree-optimization/69720,
+      PR tree-optimization/67921, PR middle-end/70941, PR middle-end/70931,
+      PR tree-optimization/70623, PR tree-optimization/70780, PR c++/70347,
+      PR c++/70466, PR fortran/71204, PR fortran/69603, PR libffi/65567,
+      PR libstdc++/70762.
+  * Update the ibm branch to 20160526.
+
+ -- Matthias Klose <doko@debian.org>  Sat, 28 May 2016 16:03:38 +0200
+
 gcc-5 (5.3.1-20) unstable; urgency=medium
 
   * Update to SVN 20160519 (r236482, 5.3.1) from the gcc-5-branch.
