--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gcc-5 (5.4.0-3) unstable; urgency=medium
+
+  * Update Ada patch for KFreeBSD (Steven Chamberlain). Closes: #826332.
+
+ -- Matthias Klose <doko@debian.org>  Sat, 04 Jun 2016 18:55:13 +0200
+
 gcc-5 (5.4.0-2) unstable; urgency=medium
 
   * Fix gdc packaging for architectures without libphobos support.
