Import patches-unapplied version 5.4.0-6ubuntu1~16.04.2 to ubuntu/xenial-security
Imported using git-ubuntu import.

Changelog parent: 9300e447ba5d8189da58ce7e96e6c8fa327c0150

New changelog entries:
  * No change rebuild for the security pocket.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gcc-5 (5.4.0-6ubuntu1~16.04.2) xenial-security; urgency=medium
+
+  * No change rebuild for the security pocket.
+
+ -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Thu, 04 Aug 2016 11:26:47 -0400
+
 gcc-5 (5.4.0-6ubuntu1~16.04.1) xenial-proposed; urgency=medium
 
   * SRU: LP: #1586673. Backport GCC 5.4 to 16.04 LTS.
